--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-menu {
+  background: rgba(0, 0, 0, 0.04);
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+}
