--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,28 @@
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
 }
+
+.menu-hover:after {
+  display: block;
+  content: "";
+  border-bottom: solid 2px #000000;
+  transform: scaleX(0);
+  transition: transform 250ms ease-in-out;
+  opacity: 1;
+}
+
+.active-menu .menu-hover{
+  border-bottom: 2px solid #000000;
+}
+
+.menu-hover:hover{
+  opacity: 1 !important;
+}
+
+.menu-hover:hover:after {
+  transform: scaleX(1);
+}
+
+.active-menu .menu-hover:hover:after {
+  transform: scaleX(0);
+}
