--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+.madimi-one-regular {
+  font-family: "Madimi One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.madimi-one-bold {
+  font-family: "Madimi One", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
