import labrary for project

--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,66 @@
   font-weight: 700;
   font-style: normal;
 }
+
+.animation-parent:hover{
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.animation-parent:hover img{
+  z-index: -1;
+  position: relative;
+}
+
+.animation-parent:hover .animation-gallery {
+  animation: 0.5s ease-in slidein forwards;
+}
+
+.animation-parent:not(:hover) .animation-gallery {
+  animation: 0.5s ease-in slideout forwards;
+}
+
+@keyframes slidein {
+  from {
+    bottom: -73px;
+  }
+
+  to {
+    bottom: 0;
+  }
+}
+
+@keyframes slideout {
+  from {
+    bottom: 0;
+  }
+
+  to {
+    bottom: -73px;
+  }
+}
+
+.swiper-pagination {
+  width: fit-content !important;
+  height: fit-content !important;
+  position: absolute;
+  z-index: 2;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 20px;
+  display: flex;
+  gap: 10px;
+}
+
+.swiper-pagination-bullet {
+  display: block;
+  height: 10px;
+  width: 10px;
+  background-color: white;
+  z-index: 2;
+  border-radius: 50%;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+  border: white double 3px;
+  background-color: transparent;
+}
