--- a/src/App.css
+++ b/src/App.css
@@ -37,14 +37,14 @@
   }
 }
 
-.madimi-one-regular {
-  font-family: "Madimi One", sans-serif;
+.Montserrat-one-regular {
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-.madimi-one-bold {
-  font-family: "Madimi One", sans-serif;
+.Montserrat-one-bold {
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
   font-style: normal;
 }
